Compatibility with Java 8; add toString methods